--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "open-pro-react",
   "version": "0.1.0",
+  "homepage": "http://chelseachampions.github.io/indeams",
+
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,9 +24,12 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.5",
     "sass": "^1.49.0",
     "tailwindcss": "^3.0.15",
     "vite": "^2.7.2"
   }
+    
+  
 }
